# devops-f20-final-exam-dmrudy17

./: CMakeLists.txt  Report.md  copy-artifact-pipeline.groovy  pipeline.groovy
.circleci/: config.yml
